# minishell

./: Makefile  README.md  valgrind_suppress
include/: builtin.h  env.h  error.h  exec.h  glob.h  init.h  io.h  lexer.h  parser.h  types.h  utils.h
include/types/: defines.h
libft/: .ccls  .gitignore  CMakeLists.txt  Makefile  Makefile.template  configure  doxygen.conf  ft_btree.h  ft_btree_type.h  ft_ctype.h  ft_list.h  ft_list_type.h  ft_math.h  ft_stdlib.h  ft_string.h  libft.h
libft/src/: ft_putstrfd.c  ft_split.c  ft_splitcs.c  ft_toupper.c
libft/src/ft_btree/: ft_btree_create.c  ft_btree_delete.c  ft_btree_delete_type.c  ft_btree_dup.c  ft_btree_foreach.c  ft_btree_foreachnd.c
libft/src/ft_ctype/: ft_isalpha.c  ft_isalphanum.c  ft_isdigit.c  ft_isspace.c
libft/src/ft_list/: ft_lstaddback.c  ft_lstaddfront.c  ft_lstappend.c  ft_lstat.c  ft_lstclear.c  ft_lstdup.c  ft_lstindex.c  ft_lstiteri.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c
libft/src/ft_math/: ft_absi.c  ft_digitat.c  ft_getdigits.c  ft_min.c  ft_powi.c
libft/src/ft_stdlib/: ft_atoi.c  ft_atoi_long.c  ft_calloc.c  ft_realloc.c  ft_strtoi.c  ft_strtol.c
libft/src/ft_string/: ft_bzero.c  ft_countc.c  ft_itoa.c  ft_memcpy.c  ft_memdup.c  ft_memelemset.c  ft_memmove.c  ft_memset.c  ft_strcat.c  ft_strchr.c  ft_strchr1.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strinsert.c  ft_strinsertn.c  ft_strjoin.c  ft_strlcpy.c  ft_strlen.c  ft_strncpy.c  ft_strremove.c  ft_strremoven.c  ft_strreplace.c  ft_strreplacen.c  ft_strtrim.c  ft_strtrim_one.c  ft_substr.c  rotate.c
src/: main.c
(+73 files in other folders)
